# ruthere

./: .gitignore  .typos.toml  Cargo.toml  README.md  clippy.toml
.github/: copyright.sh
.github/workflows/: ci.yml
.tickets/: bpf-301w.md  bpf-ti6k.md  bpf-tj84.md  rb-xgra.md  rc-4no2.md  rc-5j1i.md  rc-plgu.md  rs-40z0.md  rs-4tm4.md  rs-anjy.md  rs-e347.md  rs-f97f.md  rs-gsi2.md  rs-j2rz.md  rs-mydr.md  rs-ogxz.md
crates/ruthere_beacon/: Cargo.toml  README.md
crates/ruthere_beacon/docs/: adr-0001-beacon-boundary.md
crates/ruthere_beacon/src/: lib.rs
crates/ruthere_core/: Cargo.toml  README.md
crates/ruthere_core/docs/: adr-0001-core-presence-boundary.md
crates/ruthere_core/src/: lib.rs
crates/ruthere_server/: Cargo.toml  README.md
crates/ruthere_server/docs/: adr-0001-server-boundary.md  adr-0002-server-trait-boundary.md
crates/ruthere_server/src/: lib.rs  traits.rs
crates/ruthere_store/: Cargo.toml  README.md
crates/ruthere_store/docs/: adr-0001-in-memory-store-boundary.md  adr-0002-subject-projection-boundary.md  adr-0003-incremental-change-cursors.md  adr-0004-visibility-filtering-boundary.md  adr-0005-visibility-aware-change-cursors.md  adr-0006-watcher-cursor-boundary.md  adr-0007-resource-first-presence-roadmap.md  adr-0010-retained-log-compaction-and-resync.md
crates/ruthere_store/src/: change.rs  cursor.rs  lib.rs  projection.rs  retained.rs  visibility.rs
examples/associated_resource_flow/: Cargo.toml  README.md
examples/associated_resource_flow/src/: main.rs
examples/basic_presence_flow/: Cargo.toml  README.md
examples/basic_presence_flow/src/: main.rs
examples/watcher_presence_flow/: Cargo.toml  README.md
examples/watcher_presence_flow/src/: main.rs
