[package]
name = "ruthere_beacon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Write-side publication helpers for ruthere presence facts"
keywords = ["presence", "realtime", "state"]
categories = ["data-structures", "no-std"]

[dependencies]
ruthere_core.workspace = true

[lints]
workspace = true
