[package]
name = "ruthere_core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Semantic core types for scoped, time-sensitive presence facts"
keywords = ["presence", "realtime", "state"]
categories = ["data-structures", "no-std"]

[dependencies]

[lints]
workspace = true
